--- a/level1/style.css
+++ b/level1/style.css
@@ -9,13 +9,16 @@ display: none;}
 .show {display: block;}
 
 .black-bg {  width: 100%; height: 100%; position:fixed; 
-	top:0; left:0;  opacity: 0; transition: all 0.5s;
+	top:0; left:0;  background: rgba(0,0,0,0.5); z-index:5; padding: 30px;
+	opacity: 0; display:none;
+	transition: all 0.5s;
 	visibility: hidden;
-	background: rgba(0,0,0,0.5); z-index:5; padding: 30px;}
+	}
 .white-bg { background-color: white;padding: 20px;}
 .blue-bg { background-color: powderblue;padding: 20px;}
 .show {display: block;}
-.show-modal {display: block;
+.show-modal {
+ display: block;
  opacity: 1;
  visibility: visible;
 }
