--- a/level1/style.css
+++ b/level1/style.css
@@ -23,3 +23,11 @@ display: none;}
  visibility: visible;
 }
 
+
+/* c-mode toggle */
+.c-mode { position: relative; width: 50px; height: 28px; background-color: rgb(238, 243, 245); border-radius: 14px;
+border:1px solid #6194e7; cursor: pointer; }
+.c-mode::before { content: ''; display: block; height: 18px;width: 18px; background-color: #6194e7;
+position: absolute; left: 4px; top: 50%;border-radius: 50%; transform: translateY(-50%); transition: all 0.2s;}
+
+.c-mode.dark::before { left:calc(50px - 24px) ; background-color: #2d3f5a;}
