--- a/book_js/8_parallax/css/mainCont.css
+++ b/book_js/8_parallax/css/mainCont.css
@@ -11,14 +11,15 @@ div.skipMenu					{ display:none; width:1px; height:1px; line-height:1px; }
 
 /* made Jang yongho */
 .mContents {overflow:hidden; width:100%; min-width:1445px; margin:0px !important}
-.mContents .parallax { position:relative; width:1280px; height:3600px; margin:0 auto; }
+.mContents .parallax { position:relative; width:1280px; height:4800px; margin:0 auto; }
 
-.mSection01, .mSection02, .mSection03 {overflow:hidden; position:absolute; left:50%; width:1645px; height:1200px; margin-left:-822px;}
+.mSection01, .mSection02, .mSection03 {overflow:hidden; position:absolute; left:50%; width:1645px; 
+    height:1600px; margin-left:-822px;}
 .mSection01 > *, .mSection02 > *, .mSection03 > * {position:absolute;}
 
-.mSection01 {top:0px; background:url(../images/index/bg_main01.jpg) no-repeat left top;}
-.mSection02 {top:1200px; background:url(../images/index/bg_main02.jpg) no-repeat left top; z-index:1000}
-.mSection03 {top:2400px; background:url(../images/index/bg_main03.jpg) no-repeat left top; z-index:2000}
+.mSection01 {top:0px; background:url(../images/index/bg_main01.jpg) no-repeat left top; background-size: cover;}
+.mSection02 {top:1600px; background:url(../images/index/bg_main02.jpg) no-repeat left top; z-index:1000; background-size: cover;}
+.mSection03 {top:3200px; background:url(../images/index/bg_main03.jpg) no-repeat left top; z-index:2000; background-size: cover;}
 
 /* section01 */
 .mSection01 .arrow {position:absolute; left:300px; top:10px; width:49px; height:56px; z-index:500 }
